lib/src/raft.h

struct bop_raft_buffer;
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::counter
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_counter;
BOP_API struct bop_raft_counter *bop_raft_counter_make(const char *name, size_t name_size);
BOP_API void bop_raft_counter_delete(const struct bop_raft_counter *counter);
BOP_API const char *bop_raft_counter_name(const struct bop_raft_counter *counter);
BOP_API uint64_t bop_raft_counter_value(const struct bop_raft_counter *counter);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::gauge
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_gauge;
BOP_API struct bop_raft_gauge *bop_raft_gauge_make(const char *name, size_t name_size);
BOP_API void bop_raft_gauge_delete(const struct bop_raft_gauge *gauge);
BOP_API const char *bop_raft_gauge_name(const struct bop_raft_gauge *gauge);
BOP_API int64_t bop_raft_gauge_value(const struct bop_raft_gauge *gauge);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// nuraft::histogram
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_histogram;
BOP_API struct bop_raft_histogram *bop_raft_histogram_make(const char *name, size_t name_size);
BOP_API void bop_raft_histogram_delete(const struct bop_raft_histogram *histogram);
BOP_API const char *bop_raft_histogram_name(const struct bop_raft_histogram *histogram);
BOP_API size_t bop_raft_histogram_size(const struct bop_raft_histogram *histogram);
BOP_API uint64_t bop_raft_histogram_get(const struct bop_raft_histogram *histogram, double key);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// bop_raft_append_entries_ptr
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_append_entries_ptr;
BOP_API struct bop_raft_append_entries_ptr *bop_raft_append_entries_create();
BOP_API void bop_raft_append_entries_delete(const struct bop_raft_append_entries_ptr *self);
BOP_API size_t bop_raft_append_entries_size(const struct bop_raft_append_entries_ptr *self);
BOP_API size_t
bop_raft_append_entries_push(struct bop_raft_append_entries_ptr *self, struct bop_raft_buffer *buf);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// bop_raft_server_peer_info
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_server_peer_info {
    /**
     * Peer ID.
     */
    int32_t id;

    /**
     * The last log index that the peer has, from this server's point of view.
     */
    uint64_t last_log_idx;

    /**
     * The elapsed time since the last successful response from this peer, in microseconds.
     */
    uint64_t last_succ_resp_us;
};
struct bop_raft_server_peer_info_vec;
BOP_API struct bop_raft_server_peer_info_vec *bop_raft_server_peer_info_vec_make();
BOP_API void bop_raft_server_peer_info_vec_delete(const struct bop_raft_server_peer_info_vec *vec);
BOP_API size_t bop_raft_server_peer_info_vec_size(const struct bop_raft_server_peer_info_vec *vec);
BOP_API struct bop_raft_server_peer_info *
bop_raft_server_peer_info_vec_get(const struct bop_raft_server_peer_info_vec *vec, size_t idx);
///////////////////////////////////////////////////////////////////////////////////////////////////
/// bop_raft_server
///////////////////////////////////////////////////////////////////////////////////////////////////

struct bop_raft_server;
struct bop_raft_server_ptr;
struct bop_raft_cb_param {
    int32_t my_id;
    int32_t leader_id;
    int32_t peer_id;
    void *ctx;
};
struct bop_raft_req_msg;
struct bop_raft_resp_msg;
struct bop_raft_cb_out_of_log_range_warning_args {
    uint64_t start_idx_of_leader;
};
struct bop_raft_cb_connection_args {
    /**
     * ID of session.
     */
    uint64_t session_id;

    /**
     * Endpoint address.
     */
    const char *address;
    size_t address_len;

    /**
     * Endpoint port.
     */
    uint32_t port;

    /**
     * Endpoint server ID if given.
     */
    int32_t srv_id;

    /**
     * `true` if the endpoint server is leader.
     */
    bool is_leader;
};