lib/src/uws.h

/**
 * The response type.
 */
typedef void* uws_res_t;
/**
 * The loop type.
 */
typedef void* uws_loop_t;
BOP_API void uws_loop_defer(uws_loop_t loop, void* user_data, void (*callback)(uws_loop_t loop, void* user_data));
/**
 * Defers a handler for the response.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param callback The callback.
 */
BOP_API void uws_res_defer(uws_res_t res, void* user_data, void (*callback)(uws_loop_t loop, uws_res_t res, void* user_data));
/**
 * On writable.
 *
 * @param res The response.
 * @param user_data The user data.
 * @param handler The handler.
 */
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));