rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    pub fn bop_raft_counter_make(
        name: *const ::std::os::raw::c_char,
        name_size: usize,
    ) -> *mut bop_raft_counter;
}
unsafe extern "C" {
    pub fn bop_raft_counter_delete(counter: *const bop_raft_counter);
}
unsafe extern "C" {
    pub fn bop_raft_counter_name(counter: *const bop_raft_counter)
    -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn bop_raft_counter_value(counter: *const bop_raft_counter) -> u64;
}
#[doc = "\n nuraft::gauge\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_gauge {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_gauge_make(
        name: *const ::std::os::raw::c_char,
        name_size: usize,
    ) -> *mut bop_raft_gauge;
}
unsafe extern "C" {
    pub fn bop_raft_gauge_delete(gauge: *const bop_raft_gauge);
}
unsafe extern "C" {
    pub fn bop_raft_gauge_name(gauge: *const bop_raft_gauge) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn bop_raft_gauge_value(gauge: *const bop_raft_gauge) -> i64;
}
#[doc = "\n nuraft::histogram\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_histogram {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_histogram_make(
        name: *const ::std::os::raw::c_char,
        name_size: usize,
    ) -> *mut bop_raft_histogram;
}
unsafe extern "C" {
    pub fn bop_raft_histogram_delete(histogram: *const bop_raft_histogram);
}
unsafe extern "C" {
    pub fn bop_raft_histogram_name(
        histogram: *const bop_raft_histogram,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn bop_raft_histogram_size(histogram: *const bop_raft_histogram) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_histogram_get(histogram: *const bop_raft_histogram, key: f64) -> u64;
}
#[doc = "\n bop_raft_append_entries_ptr\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_append_entries_ptr {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_append_entries_create() -> *mut bop_raft_append_entries_ptr;
}
unsafe extern "C" {
    pub fn bop_raft_append_entries_delete(self_: *const bop_raft_append_entries_ptr);
}
unsafe extern "C" {
    pub fn bop_raft_append_entries_size(self_: *const bop_raft_append_entries_ptr) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_append_entries_push(
        self_: *mut bop_raft_append_entries_ptr,
        buf: *mut bop_raft_buffer,
    ) -> usize;
}
#[doc = "\n bop_raft_server_peer_info\n"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct bop_raft_server_peer_info {
    #[doc = " Peer ID."]
    pub id: i32,
    #[doc = " The last log index that the peer has, from this server's point of view."]
    pub last_log_idx: u64,
    #[doc = " The elapsed time since the last successful response from this peer, in microseconds."]
    pub last_succ_resp_us: u64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_server_peer_info_vec {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn bop_raft_server_peer_info_vec_make() -> *mut bop_raft_server_peer_info_vec;
}
unsafe extern "C" {
    pub fn bop_raft_server_peer_info_vec_delete(vec: *const bop_raft_server_peer_info_vec);
}
unsafe extern "C" {
    pub fn bop_raft_server_peer_info_vec_size(vec: *const bop_raft_server_peer_info_vec) -> usize;
}
unsafe extern "C" {
    pub fn bop_raft_server_peer_info_vec_get(
        vec: *const bop_raft_server_peer_info_vec,
        idx: usize,
    ) -> *mut bop_raft_server_peer_info;
}
#[doc = "\n bop_raft_server\n"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_server {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_server_ptr {
    _unused: [u8; 0],
}
pub const bop_raft_server_priority_set_result_bop_raft_server_priority_set_result_set:
    bop_raft_server_priority_set_result = 0;
pub const bop_raft_server_priority_set_result_bop_raft_server_priority_set_result_broadcast:
    bop_raft_server_priority_set_result = 1;
pub const bop_raft_server_priority_set_result_bop_raft_server_priority_set_result_ignored:
    bop_raft_server_priority_set_result = 2;
pub type bop_raft_server_priority_set_result = i32;
#[doc = " Got request from peer or client.\n ctx: pointer to request."]
pub const bop_raft_cb_type_bop_raft_cb_type_process_req: bop_raft_cb_type = 1;
#[doc = " Got append entry response from peer.\n ctx: pointer to new matched index\n number."]
pub const bop_raft_cb_type_bop_raft_cb_type_got_append_entry_resp_from_peer: bop_raft_cb_type = 2;
#[doc = " Appended logs and executed pre-commit locally.\n Happens on leader only.\n\n ctx: pointer to last log number."]
pub const bop_raft_cb_type_bop_raft_cb_type_append_logs: bop_raft_cb_type = 3;
#[doc = " Heartbeat timer wakes up.\n Happens on leader only.\n ctx: pointer to last\n log number."]
pub const bop_raft_cb_type_bop_raft_cb_type_heart_beat: bop_raft_cb_type = 4;
#[doc = " Joined a cluster.\n Happens on follower only.\n ctx: pointer to cluster\n config."]
pub const bop_raft_cb_type_bop_raft_cb_type_joined_cluster: bop_raft_cb_type = 5;
#[doc = " Became a leader.\n ctx: pointer to term number."]
pub const bop_raft_cb_type_bop_raft_cb_type_become_leader: bop_raft_cb_type = 6;
#[doc = " Request append entries to followers.\n Happens on leader only."]
pub const bop_raft_cb_type_bop_raft_cb_type_request_append_entries: bop_raft_cb_type = 7;
#[doc = " Save snapshot chunk or object, in receiver's side.\n ctx: snapshot_sync_req."]
pub const bop_raft_cb_type_bop_raft_cb_type_save_snapshot: bop_raft_cb_type = 8;
#[doc = " Committed a new config.\n ctx: pointer to log index of new config."]
pub const bop_raft_cb_type_bop_raft_cb_type_new_config: bop_raft_cb_type = 9;
#[doc = " Removed from a cluster.\n Happens on follower only.\n ctx: null."]
pub const bop_raft_cb_type_bop_raft_cb_type_removed_from_cluster: bop_raft_cb_type = 10;
#[doc = " Became a follower.\n ctx: pointer to term number."]
pub const bop_raft_cb_type_bop_raft_cb_type_become_follower: bop_raft_cb_type = 11;
#[doc = " The difference of committed log index between the follower and the\n master\n became smaller than a user-specified threshold.\n Happens on follower only.\n ctx:\n null."]
pub const bop_raft_cb_type_bop_raft_cb_type_become_fresh: bop_raft_cb_type = 12;
#[doc = " The difference of committed log index between the follower and the\n master\n became larger than a user-specified threshold.\n Happens on follwer only.\n ctx:\n null"]
pub const bop_raft_cb_type_bop_raft_cb_type_become_stale: bop_raft_cb_type = 13;
#[doc = " Got append entry request from leader.\n It will be invoked only for acceptable\n logs.\n ctx: pointer to request."]
pub const bop_raft_cb_type_bop_raft_cb_type_got_append_entry_req_from_leader: bop_raft_cb_type = 14;
#[doc = " This node is out of log range, which means that\n leader has no valid log or\n snapshot to send for this node.\n ctx: pointer to `OutOfLogRangeWarningArgs`."]
pub const bop_raft_cb_type_bop_raft_cb_type_out_of_log_range_warning: bop_raft_cb_type = 15;
#[doc = " New connection is established.\n Mostly this event happens in below cases:\n 1)\n Leader sends message to follower, then follower will fire\n      this event.\n   2)\n Candidate sends vote request to peer, then the peer (receiver)\n      will fire this\n event.\n ctx: pointer to `ConnectionArgs`."]
pub const bop_raft_cb_type_bop_raft_cb_type_connection_opened: bop_raft_cb_type = 16;
#[doc = " Connection is closed.\n ctx: pointer to `ConnectionArgs`."]
pub const bop_raft_cb_type_bop_raft_cb_type_connection_closed: bop_raft_cb_type = 17;
#[doc = " Invoked when a session receives a message from the valid leader\n first time.\n This callback is preceded by `ConnectionOpened`\n event.\n ctx: pointer to\n `ConnectionArgs`."]
pub const bop_raft_cb_type_bop_raft_cb_type_new_session_from_leader: bop_raft_cb_type = 18;
#[doc = " Executed a log in the state machine.\n ctx: pointer to the log index."]
pub const bop_raft_cb_type_bop_raft_cb_type_state_machine_execution: bop_raft_cb_type = 19;
#[doc = " Just sent an append entries request.\n ctx: pointer to `req_msg` instance."]
pub const bop_raft_cb_type_bop_raft_cb_type_sent_append_entries_req: bop_raft_cb_type = 20;
#[doc = " Just received an append entries request.\n ctx: pointer to `req_msg` instance.\n"]
pub const bop_raft_cb_type_bop_raft_cb_type_received_append_entries_req: bop_raft_cb_type = 21;
#[doc = " Just sent an append entries response.\n ctx: pointer to `resp_msg` instance."]
pub const bop_raft_cb_type_bop_raft_cb_type_sent_append_entries_resp: bop_raft_cb_type = 22;
#[doc = " Just received an append entries response.\n ctx: pointer to `resp_msg`\n instance."]
pub const bop_raft_cb_type_bop_raft_cb_type_received_append_entries_resp: bop_raft_cb_type = 23;
#[doc = " When cluster size is 2 and `auto_adjust_quorum_for_small_cluster_` is on,\n this\n server attempts to adjust the quorum size to 1.\n ctx: null"]
pub const bop_raft_cb_type_bop_raft_cb_type_auto_adjust_quorum: bop_raft_cb_type = 24;
#[doc = " Adding a server failed due to RPC errors and timeout expiry.\n ctx: null"]
pub const bop_raft_cb_type_bop_raft_cb_type_server_join_failed: bop_raft_cb_type = 25;
#[doc = " Snapshot creation begins.\n ctx: pointer to `uint64_t` (committed_idx)."]
pub const bop_raft_cb_type_bop_raft_cb_type_snapshot_creation_begin: bop_raft_cb_type = 26;
#[doc = " Got a resgination request either automatically or manually.\n ctx: null."]
pub const bop_raft_cb_type_bop_raft_cb_type_resignation_from_leader: bop_raft_cb_type = 27;
#[doc = " When a peer RPC errors count exceeds raft_server::limits.warning_limit_, or\n a\n peer doesn't respond for a long time (raft_params::leadership_expiry_),\n the peer is\n considered lost.\n ctx: null."]
pub const bop_raft_cb_type_bop_raft_cb_type_follower_lost: bop_raft_cb_type = 28;
#[doc = " When the server receives a misbehaving message from a peer,\n the callback has\n the ability to either ignore the message\n or respond normally by adjusting ReqResp.resp\n as indicated by ctx.\n\n Furthermore, the callback can opt to terminate\n if\n the situation is deemed critical.\n\n ctx: pointer to `ReqResp` instance."]
pub const bop_raft_cb_type_bop_raft_cb_type_received_misbehaving_message: bop_raft_cb_type = 29;
pub type bop_raft_cb_type = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_param {
    pub my_id: i32,
    pub leader_id: i32,
    pub peer_id: i32,
    pub ctx: *mut ::std::os::raw::c_void,
}
impl Default for bop_raft_cb_param {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_req_msg {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_resp_msg {
    _unused: [u8; 0],
}
pub const bop_raft_cb_return_code_bop_raft_cb_return_code_ok: bop_raft_cb_return_code = 0;
pub const bop_raft_cb_return_code_bop_raft_cb_return_code_return_null: bop_raft_cb_return_code = -1;
pub type bop_raft_cb_return_code = i32;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct bop_raft_cb_out_of_log_range_warning_args {
    pub start_idx_of_leader: u64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bop_raft_cb_connection_args {
    #[doc = " ID of session."]
    pub session_id: u64,
    #[doc = " Endpoint address."]
    pub address: *const ::std::os::raw::c_char,
    pub address_len: usize,
    #[doc = " Endpoint port."]
    pub port: u32,
    #[doc = " Endpoint server ID if given."]
    pub srv_id: i32,
    #[doc = " `true` if the endpoint server is leader."]
    pub is_leader: bool,
}
